@@ -39,8 +39,8 @@ TCL_VERSION = 84
 
 ## ====== configuration macros for building installers ===========
 
-# location where Inno Setup 5.x or 4.x was installed. Spaces allowed.
-ISDIR=C:/packages/Inno5
+# location where Inno Setup 5.1.x was installed. Spaces allowed.
+ISDIR=C:/packages/Inno51
 
 ## =================== cross-compilation settings  =================
 
