@@ -15,6 +15,10 @@ expected form is
 
 with *three* slashes.
 
+Inno Setup >= 5.1.2 is now required to build the installer, more
+languages are supported and R-specific parts of the installer screens
+are translated.
+
 
 
 R 2.1.0 patched
